Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
L
librsvg
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 176
    • Issues 176
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 9
    • Merge Requests 9
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • librsvg
  • Issues
  • #193

Closed
Open
Opened Feb 01, 2018 by Federico Mena Quintero@federicoMaintainer

filters-conv-05-f.svg crashes librsvg

filters-conv-05-f.svg

This file from the SVG 1.1 test suite crashes librsvg:

thread '<unnamed>' panicked at 'assertion failed: l > 0', src/parsers.rs:187:37
stack backtrace:
   0: std::sys::imp::backtrace::tracing::imp::unwind_backtrace
             at src/libstd/sys/unix/backtrace/tracing/gcc_s.rs:49
   1: std::panicking::default_hook::{{closure}}
             at src/libstd/sys_common/backtrace.rs:71
   2: std::panicking::rust_panic_with_hook
             at src/libstd/panicking.rs:396
             at src/libstd/panicking.rs:611
   3: std::panicking::begin_panic_new
   4: rsvg_internals::parsers::number_list
   5: rsvg_css_parse_number_list
   6: rsvg_filter_primitive_convolve_matrix_set_atts
             at /usr/src/packages/BUILD/librsvg-2.42.2/rsvg-filter.c:1329
   7: <rsvg_internals::cnode::CNode as rsvg_internals::node::NodeTrait>::set_atts
   8: rsvg_node_set_atts
   9: rsvg_standard_element_start

We are not initializing RsvgFilterPrimitiveConvolveMatrix.{orderx, ordery} to the default of 3 as per the spec: https://www.w3.org/TR/SVG/filters.html#feConvolveMatrixElementOrderAttribute

Since these values are 0, rsvg_css_parse_number_list() gets passed 0 for the list size and it asserts.

Assignee
Assign to
2.42.2
Milestone
2.42.2
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/librsvg#193