gitlab#193 - Don't crash when feConvolveMatrix doesn't specify orderx/ordery

We were not initializing the default values correctly, so
rsvg_css_parse_number_list() would assert as it would get passed 0 for
the expected length of the list.

https://gitlab.gnome.org/GNOME/librsvg/issues/193